# pacman-client

./: .gitignore  AGENTS.md  README.md  WORKSHOP.md  dev  opencode.jsonc  pyproject.toml
.devcontainer/: Dockerfile.opencode  devcontainer.json  setup.sh
.ralphex/: config  opencode-as-claude.sh  opencode-review.sh
docs/plans/: pacman-tui-client.md
docs/plans/completed/: pacman-tui-client.md
src/pacman/: __init__.py  __main__.py  app.py  client.py  models.py  renderer.py
src/pacman/widgets/: __init__.py  game.py  lobby.py
tests/: conftest.py  helpers.py  test_app.py  test_client.py  test_game_widget.py  test_lobby.py  test_main.py  test_models.py  test_renderer.py
